--- a/package.json
+++ b/package.json
@@ -13,22 +13,18 @@
     "axios": "^1.6.8",
     "chart.js": "^4.4.2",
     "chartjs-plugin-datalabels": "^2.2.0",
-<<<<<<< Updated upstream
     "next": "14.1.4",
-    "react": "^18",
-=======
-    "next": "^14.1.4",
     "qrcode.react": "^3.1.0",
-    "react": "^18.3.1",
+    "react": "^18",
     "react-bootstrap": "^2.10.2",
->>>>>>> Stashed changes
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18.3.1",
+    "react-dom": "^18",
     "react-icons": "^5.0.1",
     "react-qr-code": "^2.0.12",
     "react-redux": "^9.1.1",
     "react-router-dom": "^6.23.0",
     "react-slick": "^0.30.2",
+    "react-toastify": "^10.0.5",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
     "slick-carousel": "^1.8.1"
