--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
+    "react-password-checklist": "^1.5.1",
     "react-qr-code": "^2.0.12",
     "react-redux": "^9.1.1",
     "react-router-dom": "^6.23.0",
