--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.6.8",
     "chart.js": "^4.4.2",
     "chartjs-plugin-datalabels": "^2.2.0",
+    "js-cookie": "^3.0.5",
     "next": "14.1.4",
     "qrcode.react": "^3.1.0",
     "react": "^18",
